1. Метод .of [#433534]